# SciAssist

./: .env.example  .gitignore  COMANDS.md  COMMANDS.md  OBSIDIAN_SETUP.md  README.md  pyproject.toml
configs/: model_router.yaml  settings.yaml
configs/prompts/: comparison.md  critique.md  entity_extraction.md  extract_structure.md  figure_description.md  gap_analysis.md  note_template.md  ocr_page.md  rag_qa.md  related_work_draft.md  summary.md
scripts/: _check_app.js  _check_assets.py  _check_clicks.py  _check_cy.py  _check_equivalence.py  _check_errors.py  _check_library.py  _check_offline.py  _check_process.py  _check_render.py  _check_routes.py  _check_semaphore.py  _check_write.py  _check_zotero.py  _smoke_1b.py  _smoke_graph.py  _smoke_static.py  _smoke_static2.py  _syntax_check.py  healthcheck.py
src/sciassist/: cli.py  config.py  exceptions.py
src/sciassist/indexing/: rag_indexer.py
src/sciassist/note_generation/: obsidian_builder.py
src/sciassist/pipeline/: orchestrator.py
src/sciassist/preprocessing/: chunker.py  pdf_to_markdown.py
src/sciassist/rag/: hybrid_search.py  query_engine.py  reranker.py
src/sciassist/router/: model_router.py
src/sciassist/utils/: lm_studio_client.py  logging.py  retry.py  zotero_client.py
src/sciassist/vision/: figure_extractor.py
src/sciassist/web/: __init__.py  app.py  deps.py  graph_builder.py  job_manager.py  notes_editor.py  notes_reader.py  services.py
src/sciassist/web/routers/: __init__.py  graph.py  jobs.py  library.py  notes.py  (+1 more)
tests/: test_zotero.py
web/static/: app.js  index.html  style.css
