[project]
name = "sciassist"
version = "0.1.0"
description = "Local AI assistant for scientific research"
requires-python = ">=3.11"
dependencies = [
    "pyzotero>=1.5",
    "chromadb>=0.5",
    "httpx>=0.27",
    "openai>=1.40",
    "pymupdf>=1.24",
    "pdf2image>=1.17",
    "Pillow>=10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml",
    "python-frontmatter",
    "jinja2",
    "typer[all]>=0.12",
    "rich",
    "tqdm",
    "loguru",
    "tenacity",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio", "pytest-cov", "ruff", "mypy"]

[project.scripts]
sciassist = "sciassist.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
